add routes and controllers

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,15 +4,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config src/index.js",
+    "seed": "node src/utils/seeder.js",
+    "start": "node src/index.js"
   },
   "author": "Vishal Thakur",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3"
   },
   "devDependencies": {
